src/test/ui/const-generics/argument_order.stderr
error: lifetime parameters must be declared prior to type and const parameters
  --> $DIR/argument_order.rs:6:32
   |
LL | struct AlsoBad<const N: usize, 'a, T, 'b, const M: usize, U> {
   |               -----------------^^-----^^-------------------- help: reorder the parameters: lifetimes, then consts and types: `<'a, 'b, const N: usize, T, const M: usize, U>`

error: aborting due to previous error

